--- a/build.gradle
+++ b/build.gradle
@@ -2,20 +2,39 @@ plugins {
     id 'java'
 }
 
+
+
 group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     implementation 'org.hibernate:hibernate-core:5.6.5.Final'
     implementation 'mysql:mysql-connector-java:8.0.27'
+    implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
     useJUnitPlatform()
+}
+
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.application.DistanceCalculatorApp'
+    }
+    duplicatesStrategy 'exclude'
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
